--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -2,6 +2,7 @@
 {% url 'user_settings' user.username as user_settings_url %}
 {% url 'password_change' user.username as password_change_url %}
 {% url 'communities' as communities_url %}
+{% url 'communities_you_follow' as communities_you_follow_url %}
 {% url 'user_communities' user.username as user_communities_url %}
 {% url 'search_all_topics' as search_all_topics_url %}
 {% url 'searches' as searches_url %}
@@ -44,7 +45,7 @@
       </form>
       <ul class="navbar-nav mb-md-4">
         <li class="nav-item">
-          <a class="nav-link text-dark fs-12 {% if request.path == posts_foryou_based_on_communities_you_follow_url or request.path == topics_foryou_based_on_communities_you_follow_url or request.path == posts_from_community_you_follow_url %}active fw-800{% endif %}" href="{% url 'posts_foryou_based_on_communities_you_follow' %}">
+          <a class="nav-link text-dark fs-12 {% if request.path == posts_foryou_based_on_communities_you_follow_url or request.path == topics_foryou_based_on_communities_you_follow_url or request.path == posts_from_community_you_follow_url or request.path == communities_you_follow_url %}active fw-800{% endif %}" href="{% url 'posts_foryou_based_on_communities_you_follow' %}">
             For You
           </a>
         </li>
