--- a/templates/search/search_your_topics.html
+++ b/templates/search/search_your_topics.html
@@ -72,8 +72,8 @@
   <div id="topic-{{ topic.slug }}" class="card shadow-none mt-0 mb-0 border-bottom-0 rounded-0 px-3 py-2">
     <div class="card-body pt-0">
       <div class="card-header mb-2 border-0 px-0">
-        <h3 class="me-auto header-title fw-800 mt-3 fs-11">
-          {{topic.search_title_highlight|safe}}
+        <h3 class="me-auto header-title fw-800 mt-3 fs-12">
+          {{topic.search_title_highlight|capfirst|safe}}
         </h3>
         <div class="dropdown">
           <a href="javascript:;" class="dropdown-ellipses dropdown-toggle show" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="true"><i class="las la-ellipsis-h la-lg text-dark"></i></a>
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div class="fs-12 overflow-auto fw-bold">
+      <div class="fs-11 overflow-auto">
         {{ topic.search_content_highlight|safe }}
       </div>
       <div class="mb-0 mt-4">
