--- a/templates/topics/user_topics.html
+++ b/templates/topics/user_topics.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 </div>
-<form action="{% url 'search_user_topics' %}" method="get" class="mt-4">
+<form action="{% url 'search_user_topics' %}" method="get" class="mt-3">
   <div class="input-group mb-3">
     <input type="search" name="q" value="{{ request.GET.q|default:'' }}" placeholder="Search your topics" class="form-control" autocomplete="off">
     <button class="btn btn-outline-secondary" type="submit">Search</button>
@@ -66,11 +66,11 @@
       <div class="card-body">
         <div class="list-group list-group-flush my-n3">
           {% for community in user.following_communities.all %}
-          <div class="list-group-item">
+          <div class="list-group-item px-2">
             <div class="row align-items-center">
               <!-- <div class="col-auto"></div> -->
               <div class="col ms-n2">
-                <h2 class="mb-1 fs-11">
+                <h2 class="mb-1 fs-12 fw-bold">
                   <a href="{% url 'community' community.slug %}">{{community|capfirst}}</a>
                 </h2>
                 <ul class="list-group list-group-horizontal mt-2">
