--- a/templates/categories/category.html
+++ b/templates/categories/category.html
@@ -6,7 +6,7 @@
     <div class="header-body">
       <div class="row align-items-end">
         <div class="col">
-          <h1 class="header-title fs-11">
+          <h1 class="header-title fs-11 fw-800">
             {{ category.name|capfirst }}&nbsp;&nbsp;&nbsp;<span class="fs-08 text-dark" data-bs-toggle="collapse" href="#description" role="button" aria-expanded="false" aria-controls="description"><i class="bi bi-info-circle"></i></span>
           </h1>
         </div>
