--- a/templates/search/search_all_topics.html
+++ b/templates/search/search_all_topics.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% block title %}Search topics{% endblock %}
 {% block content %}
 <div class="row mb-4 mt-4">
   <div class="col">
