--- a/templates/search/searches.html
+++ b/templates/search/searches.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Searches{% endblock title %}
 {% block content %}
 <div class="row mb-4 mt-4">
   <div class="col">
