--- a/templates/communities/community.html
+++ b/templates/communities/community.html
@@ -7,7 +7,7 @@
     <div class="header-body pb-2">
       <div class="row">
         <div class="col">
-          <h1 class="header-title fs-13">
+          <h1 class="header-title fs-13 fw-800">
             {{ community|capfirst }}
           </h1>
           <ul class="list-group list-group-horizontal mt-2">
@@ -42,6 +42,9 @@
               <a href="{% url 'latest_community_topics' community.slug %}" class="dropdown-item text-dark">
                 Latest topics
               </a>
+              <a href="{% url 'latest_community_posts' community.slug %}" class="dropdown-item text-dark">
+                Latest posts
+              </a>
               <a href="#!" class="dropdown-item text-dark">
                 Most views
               </a>
@@ -64,6 +67,14 @@
     <button class="btn btn-outline-secondary" type="submit">Search</button>
   </div>
 </form>
+<ul class="nav nav-pills nav-fill mt-4 mb-4">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Topics</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'community_posts' community.slug %}">Posts</a>
+  </li>
+</ul>
 {% if community.topic_set.count > 0 %}
 <div class="card shadow-none">
   <div class="card-header">
@@ -78,7 +89,7 @@
         <div class="row align-items-center">
           <div class="col">
             <h1 class="mb-0 fs-12">
-              <a href="{% url 'topic' topic.community.slug topic.pk %}" class="fw-bold">{{topic|capfirst}}</a>
+              <a href="{% url 'topic' topic.community.slug topic.pk %}" class="">{{topic|capfirst}}</a>
             </h1>
             <ul class="list-group list-group-horizontal mt-2">
               <li class="list-group-item p-0 px-2 border-0 fs-08">{{topic.user}}</li>
