--- a/templates/communities/community_posts.html
+++ b/templates/communities/community_posts.html
@@ -1,19 +1,14 @@
 {% extends '../base.html' %}
-{% load static humanize %}
-{% block title %}Community - {{ community|capfirst }} latest topics{% endblock %}
+{% load static humanize widget_tweaks %}
+{% block title %}Community - {{ community|capfirst }}{% endblock %}
 {% block content %}
 <div class="header mt-4">
   <div class="container-fluid">
     <div class="header-body pb-2">
       <div class="row">
-        <div class="col-auto">
-          <a href="{% url 'community' community.slug %}">
-            <i class="bi bi-arrow-left-circle la-2x text-dark"></i>
-          </a>
-        </div>
         <div class="col">
           <h1 class="header-title fs-13 fw-800">
-            <a href="{% url 'community' community.slug %}">{{ community|capfirst }}</a>
+            {{ community|capfirst }}
           </h1>
           <ul class="list-group list-group-horizontal mt-2">
             <li class="list-group-item p-0 px-2 border-0 fs-08">{{community.topic_set.all|length}} topics</li>
@@ -72,36 +67,66 @@
     <button class="btn btn-outline-secondary" type="submit">Search</button>
   </div>
 </form>
+<ul class="nav nav-pills nav-fill mt-4 mb-4">
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page" href="{% url 'community' community.slug %}">Topics</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="{% url 'community_posts' community.slug %}">Posts</a>
+  </li>
+</ul>
 <div class="card shadow-none">
-  <div class="card-header">
-    <h4 class="card-header-title">
-      Latest Topics
-    </h4>
-  </div>
-  <div class="card-body">
-    <div class="list-group list-group-flush my-n3">
-      {% for topic in topics %}
-      <div class="list-group-item px-2 py-4">
-        <div class="row align-items-center">
-          <div class="col">
-            <h1 class="mb-0 fs-11">
-              <a href="" class="">{{topic}}</a>
-            </h1>
-            <ul class="list-group list-group-horizontal mt-2">
-              <li class="list-group-item p-0 px-2 border-0 fs-08">author {{topic.user}}</li>
-              <li class="list-group-item p-0 px-2 border-0 fs-08">{{topic.created|naturaltime}}</li>
-            </ul>
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;62 225
-          </div>
-          <div class="col-auto">
-            <i class="bi bi-chat-right-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;2300
-          </div>
-        </div>
+{% for topic in community.topic_set.all %}
+<div class="card-body border-bottom">
+  <div class="row align-items-center mb-4">
+    <div class="col-auto">
+      {% if topic.user.avatar %}
+      <a href="javascript:void(0)" class="avatar avatar-xs">
+        <img src="{{topic.user.avatar.url}}" alt="..." class="avatar-img rounded-circle">
+      </a>
+      {% else %}
+      <div class="avatar avatar-xs">
+        <span class="avatar-title rounded-circle">{{topic.user.username|slice:":2"}}</span>
       </div>
-      {% endfor %}
+      {% endif %}
+    </div>
+    <div class="col ms-n2">
+      <h4 class="mb-1">
+        {{ topic.user.username }}
+      </h4>
+      <p class="card-text small text-body-secondary">
+        <time datetime="{{topic.created|date:'Y-m-d H:i'}}">{{ topic.created|naturaltime }}</time>
+      </p>
     </div>
   </div>
+  <a href="{% url 'topic' topic.community.slug topic.pk %}" class="text-dark">
+  <div class="fs-11 overflow-auto mb-4 px-3">
+    {{ topic.content|safe }}
+  </div>
+  </a>
+  <div class="mb-3">
+    <div class="row">
+      <div class="col">
+
+        <!-- Reaction -->
+        <a href="#!" class="btn btn-sm btn-white">
+          😬 1
+        </a>
+        <a href="#!" class="btn btn-sm btn-white">
+          👍 2
+        </a>
+        <a href="#!" class="btn btn-sm btn-white">
+          Add Reaction
+        </a>
+      </div>
+      <div class="col-auto">
+        <a href="#!" class="btn btn-sm btn-white">
+          Share
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
 </div>
 {% endblock content %}
