--- a/templates/search/search_community_topics.html
+++ b/templates/search/search_community_topics.html
@@ -11,7 +11,7 @@
           </a>
         </div>
         <div class="col">
-          <h1 class="header-title fs-13">
+          <h1 class="header-title fs-13 fw-800">
             <a href="{% url 'community' community.slug %}">{{ community|capfirst }}</a>
           </h1>
           <ul class="list-group list-group-horizontal mt-2">
@@ -51,7 +51,7 @@
     </ul>
     {% for topic in topics %}
     <div id="topic-{{ topic.slug }}" class="card shadow-none mt-0 mb-0 rounded-0 border-0 border-bottom">
-      <div class="card-body pt-0 px-5">
+      <div class="card-body pt-0 px-3">
         <div class="card-header mb-2 border-0 px-0 mt-3">
           <div class="row align-items-center">
             <div class="col-auto">
