--- a/templates/topics/community_topics_most_views.html
+++ b/templates/topics/community_topics_most_views.html
@@ -61,20 +61,6 @@
     </div>
   </div>
 </div>
-<form action="{% url 'search_community_topics' community.slug %}" method="get" class="mt-4">
-  <div class="input-group mb-3">
-    <input type="search" name="q" value="{{ request.GET.q|default:'' }}" placeholder="Search topics in this community" class="form-control" autocomplete="off">
-    <button class="btn btn-outline-secondary" type="submit">Search</button>
-  </div>
-</form>
-<ul class="nav nav-pills nav-fill mt-4 mb-4">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Topics</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'community_posts' community.slug %}">Posts</a>
-  </li>
-</ul>
 {% if community.topic_set.count > 0 %}
 <div class="card shadow-none">
   <div class="card-header">
@@ -84,7 +70,7 @@
   </div>
   <div class="card-body">
     <div class="list-group list-group-flush my-n3">
-      {% for topic in community.topic_set.all %}
+      {% for topic in topics %}
       <div class="list-group-item px-2 py-4">
         <div class="row align-items-center">
           <div class="col">
@@ -109,4 +95,4 @@
   </div>
 </div>
 {% endif %}
-{% endblock content %}
+{% endblock %}
