--- a/templates/communities/community.html
+++ b/templates/communities/community.html
@@ -97,7 +97,7 @@
             </ul>
           </div>
           <div class="col-auto">
-            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{topic.views}}
+            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
           </div>
           <div class="col-auto">
             <i class="bi bi-chat-right-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;2300
