--- a/templates/topics/community_topics_most_views.html
+++ b/templates/topics/community_topics_most_views.html
@@ -6,6 +6,11 @@
   <div class="container-fluid">
     <div class="header-body pb-2">
       <div class="row">
+        <div class="col-auto">
+          <a href="{% url 'community' community.slug %}">
+            <i class="bi bi-arrow-left-circle la-2x text-dark"></i>
+          </a>
+        </div>
         <div class="col">
           <h1 class="header-title fs-13 fw-800">
             {{ community|capfirst }}
