--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -71,12 +71,12 @@
           </a>
         </li> -->
         <li class="nav-item">
-          <a class="nav-link text-dark fs-12" href="./docs/changelog.html">
+          <a class="nav-link text-dark fs-12" href="{% url 'random_topics' %}">
             Stumble
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark fs-12" href="./docs/changelog.html">
+          <a class="nav-link text-dark fs-12" href="">
             Notifications
           </a>
         </li>
