--- a/templates/topics/community_topics_most_views.html
+++ b/templates/topics/community_topics_most_views.html
@@ -88,7 +88,7 @@
             </ul>
           </div>
           <div class="col-auto">
-            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{topic.views}}
+            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
           </div>
           <div class="col-auto">
             <i class="bi bi-chat-right-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;2300
