--- a/templates/topics/topics_for_you_based_on_communities_you_follow.html
+++ b/templates/topics/topics_for_you_based_on_communities_you_follow.html
@@ -38,7 +38,7 @@
               <time datetime="{{topic.created|date:'Y-m-d H:i'}}">{{ topic.created|naturaltime }}</time>
             </p>
           </div>
-          <div class="col-auto">{{topic.topic_views}}</div>
+          <div class="col-auto">{{topic.topic_views.count}}</div>
           <div class="col-auto">2500 <br> replies</div>
         </div>
       </div>
