--- a/templates/communities/community.html
+++ b/templates/communities/community.html
@@ -14,6 +14,11 @@
             <li class="list-group-item p-0 px-2 border-0 fs-08">{{community.topic_set.all|length}} topics</li>
             <li class="list-group-item p-0 px-2 border-0 fs-08">{{user.following_communities.count}} followers</li>
           </ul>
+          {% if community.description %}
+          <div class="mt-3">
+            {{community.description}}
+          </div>
+          {% endif %}
         </div>
         {% if community in user.following_communities.all %}
         <div class="col-auto px-0">
