--- a/templates/topics/posts_for_you_based_on_communities_you_follow.html
+++ b/templates/topics/posts_for_you_based_on_communities_you_follow.html
@@ -69,6 +69,11 @@
         </div>
         <div class="col-auto">
           <a href="#!" class="btn btn-sm btn-white">
+            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
+          </a>
+        </div>
+        <div class="col-auto">
+          <a href="#!" class="btn btn-sm btn-white">
             Share
           </a>
         </div>
