--- a/templates/topics/topic.html
+++ b/templates/topics/topic.html
@@ -3,11 +3,9 @@
 {% block content %}
 <div class="card shadow-none mt-4">
   <div class="card-header">
-
-
-    <h4 class="card-header-title">
+    <h2 class="card-header-title fw-800">
       {{topic.title}}
-    </h4>
+    </h2>
     <a href="{% url 'community' topic.community.slug %}"><i class="bi bi-x-lg"></i></a>
   </div>
   <div class="card-body">
@@ -46,8 +44,16 @@
         </div> -->
       </div>
     </div>
-    <div class="mb-3 fs-11">
-      {{topic.content|safe}}
+    <div class="mb-3">
+      {% if topic.image %}
+      <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#modalImage-{{topic.slug}}">
+        <img src="{{topic.image.url}}" alt="{{topic.title}}" class="img-fluid border rounded">
+      </a>
+      {% else %}
+      <div class="fs-11">
+        {{topic.content|safe}}
+      </div>
+      {% endif %}
     </div>
     <div class="mb-3">
       <div class="row">
@@ -134,6 +140,26 @@
     <hr>
 
 
+  </div>
+</div>
+
+
+<div class="modal fade" id="modalImage-{{topic.slug}}" tabindex="-1" role="dialog" aria-modal="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <div class="modal-card card">
+        
+        <div class="modal-header">
+          <h4 class="modal-title">{{topic.title}}</h4>
+          
+        </div>
+       
+
+         <img src="{{topic.image.url}}" alt="{{topic.title}}" class="img-fluid">
+
+        
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
