--- a/templates/communities/latest_community_posts.html
+++ b/templates/communities/latest_community_posts.html
@@ -50,7 +50,7 @@
               <a href="{% url 'latest_community_posts' community.slug %}" class="dropdown-item text-dark">
                 Latest posts
               </a>
-              <a href="#!" class="dropdown-item text-dark">
+              <a href="{% url 'community_topics_with_most_views' community.slug %}" class="dropdown-item text-dark">
                 Most views
               </a>
               <a href="#!" class="dropdown-item text-dark">
