--- a/templates/topics/community_topics_most_views.html
+++ b/templates/topics/community_topics_most_views.html
@@ -80,7 +80,7 @@
         <div class="row align-items-center">
           <div class="col">
             <h1 class="mb-0 fs-12">
-              <a href="{% url 'topic' topic.community.slug topic.pk %}" class="">{{topic|capfirst}}</a>
+              <a href="{% url 'topic' topic.community.slug topic.pk %}" class="fw-bold">{{topic|capfirst}}</a>
             </h1>
             <ul class="list-group list-group-horizontal mt-2">
               <li class="list-group-item p-0 px-2 border-0 fs-08">{{topic.user}}</li>
