--- a/templates/communities/latest_community_topics.html
+++ b/templates/communities/latest_community_topics.html
@@ -86,15 +86,15 @@
         <div class="row align-items-center">
           <div class="col">
             <h1 class="mb-0 fs-11">
-              <a href="" class="">{{topic}}</a>
+              <a href="{% url 'topic' topic.community.slug topic.pk %}" class="fw-bold">{{topic}}</a>
             </h1>
             <ul class="list-group list-group-horizontal mt-2">
-              <li class="list-group-item p-0 px-2 border-0 fs-08">author {{topic.user}}</li>
+              <li class="list-group-item p-0 px-2 border-0 fs-08">{{topic.user}}</li>
               <li class="list-group-item p-0 px-2 border-0 fs-08">{{topic.created|naturaltime}}</li>
             </ul>
           </div>
           <div class="col-auto">
-            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;62 225
+            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
           </div>
           <div class="col-auto">
             <i class="bi bi-chat-right-fill"></i>&nbsp;&nbsp;&nbsp;&nbsp;2300
