--- a/templates/topics/new_topic.html
+++ b/templates/topics/new_topic.html
@@ -9,7 +9,7 @@
     </h4>
     <ul class="nav nav-tabs nav-tabs-sm">
       <li class="nav-item">
-        <a href="{% url 'community' community.slug %}" class="nav-link text-dark"><i class="las la-times la-lg"></i></a>
+        <a href="{% url 'user_topics' user.username %}" class="nav-link text-dark" onclick="window.close();"><i class="las la-times la-lg"></i></a>
       </li>
     </ul>
   </div>
