--- a/templates/categories/categories.html
+++ b/templates/categories/categories.html
@@ -7,7 +7,7 @@
     <div class="header-body pb-3">
       <div class="row align-items-end">
         <div class="col">
-          <h1 class="header-title fs-12">Interests</h1>
+          <h1 class="header-title fs-12">Communities</h1>
         </div>
         <div class="col-auto">
           <a class="btn btn-primary btn-white text-dark rounded-5" data-bs-toggle="collapse" href="#filterCategories">
