--- a/templates/search/search_community_topics.html
+++ b/templates/search/search_community_topics.html
@@ -40,7 +40,7 @@
 {% endif %}
 {% if search_count > 0 %}
 <div class="card shadow-none">
-  <div class="card-body">
+  <div class="card-body pt-0">
     <ul class="nav nav-tabs mb-4">
       <li class="nav-item">
         <a class="nav-link active" href="{% url 'search_community_topics' community.slug %}?q={{ request.GET.q|default:'' }}">Topics</a>
