--- a/templates/topics/new_topic.html
+++ b/templates/topics/new_topic.html
@@ -1,6 +1,19 @@
 {% extends '../base.html' %}
 {% load humanize widget_tweaks static %}
 {% block title %}New Topic{% endblock title %}
+<style>
+  #id_is_question {
+    cursor: pointer;
+    height: 1rem;
+    margin-top: calc(.75em - .5rem);
+    width: 1rem;
+    border-radius: 0.375rem;
+  }
+  #id_is_question:checked {
+    background-color: #2c7be5;
+    border-color: #2c7be5;
+  }
+</style>
 {% block content %}
 <div class="card mt-4 py-0 shadow-none">
   <div class="card-header border-bottom-0">
@@ -35,6 +48,13 @@
             {{form.title.errors|join:"<br>"}}
           </div>
         {% endif %}
+      </div>
+      <div class="form-group">
+        <div class="d-flex fs-08 mb-2">
+          <div></div>
+          {{form.is_question}}&nbsp;&nbsp;&nbsp;
+          {{form.is_question.label_tag}}
+        </div>
       </div>
       <div class="form-group">
         <div class="d-flex fs-08 mb-2">
