--- a/templates/topics/new_topic.html
+++ b/templates/topics/new_topic.html
@@ -1,25 +1,12 @@
 {% extends '../base.html' %}
 {% load humanize widget_tweaks static %}
 {% block title %}New Topic{% endblock title %}
-<style>
-  #id_is_question {
-    cursor: pointer;
-    height: 1rem;
-    margin-top: calc(.75em - .5rem);
-    width: 1rem;
-    border-radius: 0.375rem;
-  }
-  #id_is_question:checked {
-    background-color: #2c7be5;
-    border-color: #2c7be5;
-  }
-</style>
 {% block content %}
 <div class="card mt-4 py-0 shadow-none">
-  <div class="card-header border-bottom-0">
-    <h4 class="header-title">
+  <div class="card-header border-bottom">
+    <h2 class="header-title fw-800">
       {{community|capfirst}}
-    </h4>
+    </h2>
     <ul class="nav nav-tabs nav-tabs-sm">
       <li class="nav-item">
         <a href="{% url 'user_topics' user.username %}" class="nav-link text-dark" onclick="window.close();"><i class="las la-times la-lg"></i></a>
@@ -48,13 +35,6 @@
             {{form.title.errors|join:"<br>"}}
           </div>
         {% endif %}
-      </div>
-      <div class="form-group">
-        <div class="d-flex fs-08 mb-2">
-          <div></div>
-          {{form.is_question}}&nbsp;&nbsp;&nbsp;
-          {{form.is_question.label_tag}}
-        </div>
       </div>
       <div class="form-group">
         <div class="d-flex fs-08 mb-2">
