--- a/templates/topics/posts_for_you_based_on_communities_you_follow.html
+++ b/templates/topics/posts_for_you_based_on_communities_you_follow.html
@@ -52,31 +52,26 @@
       {{ topic.content|safe }}
     </div>
     </a>
-    <div class="mb-3">
-      <div class="row">
-        <div class="col">
-
-          <!-- Reaction -->
-          <a href="#!" class="btn btn-sm btn-white">
-            😬 1
-          </a>
-          <a href="#!" class="btn btn-sm btn-white">
-            👍 2
-          </a>
-          <a href="#!" class="btn btn-sm btn-white">
-            Add Reaction
-          </a>
-        </div>
-        <div class="col-auto">
-          <a href="#!" class="btn btn-sm btn-white">
-            <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
-          </a>
-        </div>
-        <div class="col-auto">
-          <a href="#!" class="btn btn-sm btn-white">
-            Share
-          </a>
-        </div>
+    <div class="row px-3">
+      <div class="col-2">
+        <a href="#!" class="btn btn-sm btn-white border-0">
+          <i class="bi bi-chat-right-text"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.comments.count}}
+        </a>
+      </div>
+      <div class="col-2">
+        <a href="#!" class="btn btn-sm btn-white border-0">
+          <i class="bi bi-heart"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.likes.count}}2
+        </a>
+      </div>
+      <div class="col-2">
+        <a href="#!" class="btn btn-sm btn-white border-0">
+          <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
+        </a>
+      </div>
+      <div class="col-2">
+        <a href="#!" class="btn btn-sm btn-white border-0">
+          <i class="bi bi-bookmark"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
+        </a>
       </div>
     </div>
   </div>
