--- a/templates/topics/random_topics.html
+++ b/templates/topics/random_topics.html
@@ -3,13 +3,58 @@
 {% block title %}Random Topics{% endblock %}
 {% block content %}
 
+<div class="card shadow-none mt-4">
 {% for topic in topics %}
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">{{ topic.title }}</h5>
-    <p class="card-text">{{ topic.content|safe }}</p>
+<div class="card-body border-bottom">
+  <div class="row align-items-center mb-4">
+    <div class="col-auto">
+      {% if topic.user.avatar %}
+      <a href="javascript:void(0)" class="avatar avatar-xs">
+        <img src="{{topic.user.avatar.url}}" alt="..." class="avatar-img rounded-circle">
+      </a>
+      {% else %}
+      <div class="avatar avatar-xs">
+        <span class="avatar-title rounded-circle">{{topic.user.username|slice:":2"}}</span>
+      </div>
+      {% endif %}
+    </div>
+    <div class="col ms-n2">
+      <h4 class="mb-1">
+        {{ topic.user.username }}
+      </h4>
+      <p class="card-text small text-body-secondary">
+        <time datetime="{{topic.created|date:'Y-m-d H:i'}}">{{ topic.created|naturaltime }}</time>
+      </p>
+    </div>
+  </div>
+  <a href="{% url 'topic' topic.community.slug topic.pk %}" class="text-dark">
+  <div class="fs-11 overflow-auto mb-4 px-3">
+    {{ topic.content|safe }}
+  </div>
+  </a>
+  <div class="row px-3">
+    <div class="col-2">
+      <a href="#!" class="btn btn-sm btn-white border-0">
+        <i class="bi bi-chat-right-text"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.comments.count}}
+      </a>
+    </div>
+    <div class="col-2">
+      <a href="#!" class="btn btn-sm btn-white border-0">
+        <i class="bi bi-heart"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.likes.count}}2
+      </a>
+    </div>
+    <div class="col-2">
+      <a href="#!" class="btn btn-sm btn-white border-0">
+        <i class="bi bi-eye"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
+      </a>
+    </div>
+    <div class="col-2">
+      <a href="#!" class="btn btn-sm btn-white border-0">
+        <i class="bi bi-bookmark"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{topic.topic_views.count}}
+      </a>
+    </div>
   </div>
 </div>
 {% endfor %}
-
+</div>
 {% endblock %}
